--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ description = "Python logging made (stupidly) simple"
 dynamic = ['version']
 keywords = ["loguru", "logging", "logger", "log"]
 license = { text = "MIT" }
-name = "loguru"
+name = "loguru-zopyx"
 readme = 'README.rst'
 requires-python = ">=3.5,<4.0"
 
